# CStrOpenMP

./: BigStr.txt  CMakeLists.txt  CString.cpp  CString.hpp  CString0.cpp  CString0.hpp  CString1.cpp  CString1.hpp  Factory.hpp  FactoryH.hpp  FactoryV.hpp  functions.cpp  functions.hpp  main.cpp
new_version/: BigStr.txt  CString.cpp  CString.hpp  CString0.cpp  CString0.hpp  CString1.cpp  CString1.hpp  Factory.hpp  FactoryH.hpp  FactoryV.hpp  autotest.cpp  autotest.hpp  functions.cpp  functions.hpp  main.cpp  t2.txt
